--- a/Web/Test/index.html
+++ b/Web/Test/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <p>document title</p>
+        <h1>document title</h1>
     <body>
-        <p>all the text and instructions for the document</p>
+        <p>all the text and instructions my Ogren page</p>
     </body>
 </html>
