--- a/Web/Test/index.html
+++ b/Web/Test/index.html
@@ -2,6 +2,6 @@
     <head>
         <h1>document title</h1>
     <body>
-        <p>all the text and instructions my Ogren page</p>
+        <p>all the text and instructions for my Ogren page</p>
     </body>
 </html>
