--- a/Web/Test/index.html
+++ b/Web/Test/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <h1>document title</h1>
+        <h1>My document title</h1>
     <body>
         <p>all the text and instructions for my Ogren page</p>
     </body>
